--- a/i18n/translations/en/LC_MESSAGES/messages.po
+++ b/i18n/translations/en/LC_MESSAGES/messages.po
@@ -14,7 +14,7 @@ msgstr ""
 "Generated-By: Babel 2.17.0\n"
 
 msgid "home_header"
-msgstr "Hello World!"
+msgstr "Hello world!"
 
 msgid "home_title"
 msgstr "Welcome to Holberton"
