--- a/i18n/translations/en/LC_MESSAGES/messages.po
+++ b/i18n/translations/en/LC_MESSAGES/messages.po
@@ -18,3 +18,9 @@ msgstr "Hello world!"
 
 msgid "home_title"
 msgstr "Welcome to Holberton"
+
+msgid "loged_in_as"
+msgstr "You are logged in as %(username)s."
+
+msgid "not_logged_in"
+msgstr "You are not logged in."
