--- a/i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/i18n/translations/fr/LC_MESSAGES/messages.po
@@ -18,3 +18,9 @@ msgstr "Bonjour monde!"
 
 msgid "home_title"
 msgstr "Bienvenue chez Holberton"
+
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
+
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
