--- a/i18n/translations/en/LC_MESSAGES/messages.po
+++ b/i18n/translations/en/LC_MESSAGES/messages.po
@@ -19,7 +19,7 @@ msgstr "Hello world!"
 msgid "home_title"
 msgstr "Welcome to Holberton"
 
-msgid "loged_in_as"
+msgid "logged_in_as"
 msgstr "You are logged in as %(username)s."
 
 msgid "not_logged_in"
