--- a/i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/i18n/translations/fr/LC_MESSAGES/messages.po
@@ -20,7 +20,7 @@ msgid "home_title"
 msgstr "Bienvenue chez Holberton"
 
 msgid "logged_in_as"
-msgstr "Vous êtes connecté en tant que %(username)s."
+msgstr "Vous êtes connecté en tant que {username}."
 
 msgid "not_logged_in"
 msgstr "Vous n'êtes pas connecté."
