--- a/i18n/translations/en/LC_MESSAGES/messages.po
+++ b/i18n/translations/en/LC_MESSAGES/messages.po
@@ -20,7 +20,7 @@ msgid "home_title"
 msgstr "Welcome to Holberton"
 
 msgid "logged_in_as"
-msgstr "You are logged in as %(username)s."
+msgstr "You are logged in as {username}."
 
 msgid "not_logged_in"
 msgstr "You are not logged in."
